[package]
name = "rustbook"
version = "0.4.2"
authors = [
        "Steve Klabnik <steve@steveklabnik.com>",
        "aturon@mozilla.com",
        "Tatsuy a Kawano <tatsuya@hibaridb.org>"
        ]

description = "Create multi-chapter documentation with Rustdoc."
license = "Apache-2.0"
repository = "https://github.com/rust-lang-ja/rustbook"
# documentation = "http://rust-lang-ja.github.io/rustbook/rustbook/"

[[bin]]
name="rustbook"
test=false
